frontend/src/styles/Calculator.css
#calculator-body {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	outline: 3px solid rgb(106, 135, 221);
	background-color: rgb(131, 158, 241);
	border-radius: 10px;
	padding: 2%;
	aspect-ratio: 5 / 8;
	max-height: 80vh;
	height: 100%;
}

#calculator-buttons {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	grid-template-rows: repeat(6, 1fr);
	gap: 2%;
	border-radius: 10px;
	height: 65%;
}

#calculator-screen {
	grid-column: span 5;
	height: 20%;
	background-color: #cce3f9;
	border-radius: 8px;
	padding: 3%;
	font-size: 2rem;
	text-align: right;
	display: flex;
	align-items: center;
	justify-content: flex-end;
	color: black;
	font-family: "Courier New", monospace;
	margin-top: 5%;
	box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.3); /* Inward shadow */
}

.calculator-buttonRed,
.calculator-buttonBlack,
.calculator-buttonWhite {
	width: 100%;
	height: 100%;
	border-radius: 4px;
	font-family: "Courier New", monospace;
	font-size: 1.5em;
	box-shadow: 2px 2px 4px rgba(0, 0, 0.2);
	transition-duration: 0.25s;
}

.calculator-buttonRed:active,
.calculator-buttonBlack:active,
.calculator-buttonWhite:active {
	box-shadow: 0 0 0 0 #000;
	transition-duration: 0.15s;
}

.calculator-buttonRed {
	background-color: red;
	color: white;
}

.calculator-buttonBlack {
	background-color: black;
	color: white;
}

.calculator-buttonWhite {
	background-color: white;
	color: black;
}

